# flowerpower

./: ._pre-commit-config.yaml.bak  .gitignore  .pdm-python  .pre-commit-config.yaml  .roomodes  .roomodes.bak  404.html  AGENTS.md  CHANGELOG.md  CONTEXT.md  GEMINI.md  LICENSE  PLAN_REMOVE_APScheduler.md  README.md  README_old.md  WATCHDOG.yml  abc.md  abc.py  alembic.ini  anypath.yaml  cfg_module_code_review.md  doc.md  documentation_instructions.md  fix_summary.md  generate_cli_docs.py  getting_started.md  hello_world.json  index.html  progress.md  project.yml  pwc.yml  pyproject.toml  repomix-output.md  repomix.config.json  scheduler.db  sitemap.xml  test_fix.py  test_fix_verification.py  test_reproduce_bug.py  test_solutions.py  (+1 more)
.codegraph/: daemon.pid
.execflow/: AGENTS.md  PLANS.md  settings.yml
.factory/commands/: openspec-archive.md
.factory/docs/: 2025-10-16-clean-runconfig-retry-yaml-persistence.md  2025-10-16-enhance-executor-overrides-and-cli-support.md  2025-10-16-fix-convert-retry-exceptions-to-strings-for-yaml.md  2025-10-16-populate-openspec-project.md  2025-10-17-docs-updates-env-overlay-yaml-interpolation.md
.github/hooks/: version-hook.sh
.github/workflows/: publish.yml
.memory/: main.md  state.yaml
.pi/prompts/: implement-tickets-loop.md
.pi/todos/: 03f1e77a.md  4b5b8a5f.md
.plans/2025-10-16/: 2025-10-16-openspec-refactor-runconfig-retry-fields-into-retryconfig.md  2025-10-16-updated-plan-env-override-coexistence-yaml-env-interpolation.md  cleanup-refactor-plan-spec.md
.plans/2026-03-26/: deep-analysis-and-refactoring-plan.md
.roo/: mcp.json
.roo/rules-agent-context-condenser/: 01-kb-lookup-rule.md
.roo/rules-agent-context-discovery/: 01-kb-lookup-rule.md
.roo/rules-agent-context-resolver/: 01-kb-lookup-rule.md
.roo/rules-agent-file-repair/: 01-kb-lookup-rule.md
.roo/rules-agent-mcp-manager/: 01-initialization-rule.md  02-install-other-rule.md  99-kb-lookup-rule.md
.roo/rules-agent-research/: 01-kb-lookup-rule.md
.roo/rules-agent-session-summarizer/: 01-kb-lookup-rule.md
.roo/rules-auth-clerk/: 01-kb-lookup-rule.md
.roo/rules-auth-firebase/: 01-kb-lookup-rule.md
.roo/rules-auth-supabase/: 01-kb-lookup-rule.md
.roo/rules-baas-firebase/: 01-kb-lookup-rule.md
.roo/rules-baas-supabase/: .placeholder  01-kb-lookup-rule.md
.roo/rules-cloud-aws/: 01-kb-lookup-rule.md
.roo/rules-cloud-azure/: 01-kb-lookup-rule.md
.roo/rules-cloud-gcp/: 01-kb-lookup-rule.md
.roo/rules-cms-directus/: 01-kb-lookup-rule.md
.roo/rules-cms-wordpress/: 01-kb-lookup-rule.md
.roo/rules-core-architect/: 01-kb-lookup-rule.md
.roo/rules-data-dbt/: 01-kb-lookup-rule.md
.roo/rules-data-elasticsearch/: 01-kb-lookup-rule.md
.roo/rules-data-mongo/: 01-kb-lookup-rule.md
.roo/rules-data-mysql/: 01-kb-lookup-rule.md
.roo/rules-data-neon/: 01-kb-lookup-rule.md
.roo/rules-data-specialist/: 01-kb-lookup-rule.md
.roo/rules-design-animejs/: 01-kb-lookup-rule.md
.roo/rules-design-antd/: 01-kb-lookup-rule.md
.roo/rules-design-bootstrap/: 01-kb-lookup-rule.md
.roo/rules-design-d3/: 01-kb-lookup-rule.md
.roo/rules-design-diagramer/: 01-kb-lookup-rule.md
.roo/rules-design-mui/: 01-kb-lookup-rule.md
.roo/rules-design-one-shot/: 01-kb-lookup-rule.md
.roo/rules-design-shadcn/: 01-kb-lookup-rule.md
.roo/rules-design-tailwind/: 01-kb-lookup-rule.md
.roo/rules-design-threejs/: 01-kb-lookup-rule.md
.roo/rules-design-ui/: 01-kb-lookup-rule.md
.roo/rules-dev-api/: 01-kb-lookup-rule.md
.roo/rules-dev-core-web/: 01-task-logging.md  02-command-safety.md
.roo/rules-dev-eslint/: 01-kb-lookup-rule.md
.roo/rules-dev-fixer/: 01-kb-lookup-rule.md
.roo/rules-dev-git/: 01-kb-lookup-rule.md
.roo/rules-dev-golang/: 01-kb-lookup-rule.md
.roo/rules-dev-python/: 01-kb-lookup-rule.md
.roo/rules-dev-react/: 01-kb-lookup-rule.md
.roo/rules-dev-solver/: 01-kb-lookup-rule.md
.roo/rules-edge-workers/: 01-kb-lookup-rule.md
.rooroo/: queue.jsonl
.ruru/processes/: README.md  (+3 more)
.ticket-flow/: AGENTS.md  PLANS.md
.tickets/: flo-1lti.md  flo-2n9o.md  flo-5wma.md  flo-8qw5.md  flo-a7kx.md  flo-apob.md  flo-b3nm.md  flo-c9pq.md  flo-d2rs.md  flo-dv90.md  flo-e0im.md  flo-e4tw.md  flo-en6e.md  flo-f6uv.md  flo-f891.md  flo-g8wx.md  flo-h9yz.md  flo-j1kp.md  flo-k3lm.md  flo-kv7v.md  flo-l5no.md  flo-m7pr.md  flo-m81z.md  flo-p15d.md  flo-t1hq.md  flo-teil.md  flo-vinw.md
advanced/: index.html
alembic/: env.py
api/: index.html
architecture/: index.html
cli/: index.html
conf/: project.yml
context_portal/: context.db
contributing/: index.html
dev/: scheduler.py  test.py  test_job.py  worker.py
diagnostics/: msgspec_diagnostic.py
docker/: Caddyfile  Caddyfile.bak  Dockerfile  GitHub.copilot-chat-0.15.2024043005.vsix  docker-compose.yml
docs/: 01_pipelineregistry_.md  02_pipelinemanager_.md  03_configuration__config___projectconfig___pipelineconfig__.md  04_pipelinerunner_.md  05_filesystem_abstraction__fsspec_wrappers_helpers__.md  06_i_o_plugins__basefilereader_writer__loaders__savers__.md  07_adapters__hamilton_integration__.md  08_jobqueuemanager_.md  08_jobqueuemanager___pipelinejobqueue_.md  apscheduler_to_rq_migration.md  cleanup-refactor-plan.md  cleanup-tasks.md  cli_code_review.md  cli_refactoring_summary.md  getting_started.md  index.md  mkdocs.yml  utils_code_review.md
examples/: apscheduler_example.py  huey_example.py  index.html  my_flow.py  rq_example.py  test_apscheduler_backend.py  test_rq_backend.py
flowerpower_webapp/: README.md  __init__.py  main.py
installation/: index.html
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
openspec/: project.md
quickstart/: index.html
scripts/: security-audit.sh  test.sh
search/: search_index.json
templates/: new_pipeline.html  pipeline_detail.html  pipelines.html  schedule_pipeline.html
tests/: conftest.py  test_docs_consistency.py  test_example_pipeline_config_loading.py  test_flowerpower_project.py
web_ui/: README.md  app.py  config.py  projects_data.json  requirements.txt  run.py  test_app.py
(+1600 files in other folders)
