[project]
name = "FlowerPower"
description = "A simple workflow framework. Hamilton + APScheduler = FlowerPower"
authors = [{ name = "Volker L.", email = "ligno.blades@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"
version = "0.11.6.9"
keywords = [
  "hamilton",
  "workflow",
  "pipeline",
  "scheduler",
  "apscheduler",
  "dask",
  "ray",
]

dependencies = [
  'dill>=0.3.8',
  'duration-parser>=1.0.1',
  'fsspec>=2024.10.0',
  'humanize>=4.12.2',
  'msgspec>=0.19.0',
  'munch>=4.0.0',
  'orjson>=3.10.15',
  'python-dotenv>=1.0.1',
  'pyyaml>=6.0.1',
  'rich>=13.9.3',
  's3fs>=2024.10.0',
  'sf-hamilton-sdk>=0.5.2',
  'sf-hamilton[visualization,rich,tqdm]>=1.69.0',
  'typer>=0.12.3',
]


[project.urls]
"Homepage" = "https://github.com/legout/flowerpower"
"Bug Tracker" = "https://github.com/legout/flowerpower/issues"

[project.scripts]
flowerpower = "flowerpower.cli:app"

[project.optional-dependencies]
apscheduler = [
  'aiosqlite>=0.21.0',
  'apscheduler==4.0.0a5',
  'asyncpg>=0.29.0',
  'greenlet>=3.0.3',
  'sqlalchemy>=2.0.30',
  "cron-descriptor>=1.4.5",
]
io = [
  "adbc-driver-manager>=1.4.0",
  "aiosqlite>=0.21.0",
  'datafusion>=43.1.0',
  "deltalake>=0.24.0",
  'duckdb>=1.1.3',
  'orjson>=3.10.12',
  "pandas>=2.2.3",
  'polars>=1.15.0',
  'pyarrow>=18.1.0',
  'pydala2>=0.9.4.5',
  "redis>=5.2.1",
  "sherlock>=0.4.1",
  "sqlalchemy>=2.0.30",
]
io-legacy = [
  "adbc-driver-manager>=1.4.0",
  "aiosqlite>=0.21.0",
  'datafusion>=43.1.0',
  "deltalake>=0.24.0",
  'duckdb>=1.1.3',
  'orjson>=3.10.12',
  "pandas>=2.2.3",
  'polars-lts-cpu>=1.15.0',
  'pyarrow>=18.1.0',
  'pydala2>=0.9.4.5',
  "redis>=5.2.1",
  "sherlock>=0.4.1",
  "sqlalchemy>=2.0.30",
]
mongodb = ["pymongo>=4.7.2"]
mqtt = ["paho-mqtt>=2.1.0", "orjson>=3.10.11", "mmh3>=5.1.0"]
opentelemetry = [
  "opentelemetry-api>=1.5.0",
  "opentelemetry-sdk>=1.5.0",
  "opentelemetry-exporter-jaeger>=1.21.0", #"sf-hamilton[opentelemetry]>=1.83.3"
]
ray = ["ray>=2.34.0"]
redis = ["redis>=5.0.4"]
rq = ["rq>=2.3.1", "rq-scheduler>=0.14.0", "cron-descriptor>=1.4.5"]
tui = ["textual>=0.85.2"]
ui = ["sf-hamilton-ui>=0.0.11"]
webserver = ["sanic>=24.6.0", "sanic-ext>=23.12.0", "orjson>=3.10.11"]
openlineage = ["openlineage-python>=1.32.0"]


[tool.uv]
dev-dependencies = [
  "ipython>=8.24.0",
  "isort>=5.13.2",
  "ruff>=0.7.1",
  "jupyterlab>=4.3.0",
  "pytest>=8.3.4",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "marimo>=0.10.19",
  "pre-commit>=4.2.0",
  "rq-dashboard>=0.8.2.2",
]
package = true
