[project]
name = "FlowerPower"
description = "A simple workflow framework for building and managing data processing pipelines"
authors = [{ name = "Volker L.", email = "ligno.blades@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"
version = "0.21.0"
keywords = [
  "hamilton",
  "workflow",
  "pipeline",
  "scheduler",
  "dask",
  "ray",
]

dependencies = [
  #'dill>=0.3.8',
  'duration-parser>=1.0.1',
  'fsspec>=2024.10.0',
  'fsspec-utils>=0.1.0',
  'humanize>=4.12.2',
  'msgspec>=0.19.0',
  'munch>=4.0.0',
  #"openai>=1.100.2",
  #'orjson>=3.10.15',
  #'python-dotenv>=1.0.1',
  'pyyaml>=6.0.1',
  'rich>=13.9.3',
  's3fs>=2024.10.0',
  'sf-hamilton-sdk>=0.5.2',
  'sf-hamilton[visualization,rich,tqdm]>=1.69.0',
  'typer>=0.12.3',
]


[project.urls]
"Homepage" = "https://github.com/legout/flowerpower"
"Bug Tracker" = "https://github.com/legout/flowerpower/issues"

[project.scripts]
flowerpower = "flowerpower.cli:app"

[project.optional-dependencies]
io = ["flowerpower-io>=0.1.1"]
io-legacy = ["flowerpower-io[legacy]>=0.1.1"]
mongodb = ["pymongo>=4.7.2"]
mqtt = ["paho-mqtt>=2.1.0", "orjson>=3.10.11", "mmh3>=5.1.0"]
opentelemetry = [
  "opentelemetry-api>=1.5.0",
  "opentelemetry-sdk>=1.5.0",
  "opentelemetry-exporter-jaeger>=1.21.0", #"sf-hamilton[opentelemetry]>=1.83.3"
]
ray = ["ray>=2.34.0"]
tui = ["textual>=0.85.2"]
ui = ["sf-hamilton-ui>=0.0.11"]
webserver = ["sanic>=24.6.0", "sanic-ext>=23.12.0", "orjson>=3.10.11"]
openlineage = ["openlineage-python>=1.32.0"]


[tool.uv]
dev-dependencies = [
  "ipython>=8.24.0",
  "isort>=5.13.2",
  "ruff>=0.7.1",
  "jupyterlab>=4.3.0",
  "pytest>=8.3.4",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "marimo>=0.10.19",
  "pre-commit>=4.2.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.17",
  "quarto>=0.1.0",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-mermaid2-plugin>=1.2.1",
  "pymdown-extensions>=10.16.1",
  "mkdocstrings>=0.30.0",
  "mkdocstrings-python>=1.17.0",
]
package = true
